<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_hrim_plugins</name>
  <version>0.1.0</version>
  <description>
    HRIM Gazebo plugins for sensors and motors.
  </description>

  <maintainer email="ahcorde@erlerobotics.com">Alejandro Hernandez</maintainer>

  <license>BSD, Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/AcutronicRobotics/gazebo_hrim_plugins/issues</url>
  <url type="repository">https://github.com/AcutronicRobotics/gazebo_hrim_plugins</url>

  <author>Alejandro Hernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclcpp</build_depend>

  <build_depend>hrim_composite_arm_msgs</build_depend>
  <build_depend>hrim_sensor_forcetorque_msgs</build_depend>
  <build_depend>hrim_sensor_rangefinder_msgs</build_depend>
  <build_depend>hrim_sensor_lidar_msgs</build_depend>
  <build_depend>hrim_sensor_imu_msgs</build_depend>
  <build_depend>hrim_geometry_msgs</build_depend>
  <build_depend>hrim_sensor_camera_msgs</build_depend>
  <build_depend>hrim_composite_mobilebase_msgs</build_depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hrim_composite_arm_msgs</exec_depend>
  <exec_depend>hrim_sensor_forcetorque_msgs</exec_depend>
  <exec_depend>hrim_sensor_rangefinder_msgs</exec_depend>
  <exec_depend>gazhrim_sensor_lidar_msgsebo_dev</exec_depend>
  <exec_depend>hrim_sensor_imu_msgs</exec_depend>
  <exec_depend>hrim_geometry_msgs</exec_depend>
  <exec_depend>hrim_sensor_camera_msgs</exec_depend>
  <exec_depend>hrim_composite_mobilebase_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>cv_bridge</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
